# publications

./: README  publications.bib
htmlify/: README  htmlify.cabal
htmlify/src/: Main.hs  Publication.hs
