Name:           Htmlify
Version:        0.1
Cabal-Version:  >= 1.2
License:        BSD3
Author:         Geoff Hulette
Synopsis:       Convert bibtex to HTML
Build-Type:     Simple
  
Executable htmlify
  Main-Is:        Main.hs
  Hs-Source-Dirs: src
  Build-Depends:  base >= 4, containers, parsec >= 3.1.2,
                  bibtex, blaze-html, latex
  GHC-Options:    -O2 -Wall
